src/sections/portfolio/portfolio.css
#portfolio {
  /* margin-top: 160px;
  padding-top: 150px; */
  display: flex;
  flex-direction: column;
}

#portfolio.dark {
  background: transparent;
}

.skills-title .project-title {
  display: block;
  font-size: 42px;
  margin: 0 auto;
  position: relative;
  padding-bottom: 6px;
  font-weight: bold;
  color: black;
  text-align: center;
}

.skills-title .project-title::after {
  content: " ";
  position: absolute;
  bottom: -1px;
  height: 6px;
  left: 48%;
  width: 12%;
  transform: translateX(-30%);
  background-color: var(--primary-brand-color-400);
  border-radius: 10px;
}

.portfolio__container.dark {
  background: transparent;
}

.section-categorybutton {
  margin-top: -150px;
  margin-bottom: -120px;
}

.portfolio__categories {
  display: flex;
  justify-content: center;
  gap: 0.3rem;
  flex-wrap: wrap;
  margin-top: 70px;
}

.container.portfolio__categories.dark {
  background: none;
}

.btn.cat__btn {
  padding: 20px 25px;
  text-transform: capitalize;
  transition: var(--transition);
  display: inline-block;
  white-space: nowrap;
  width: 100%;
  display: inline-block;
  width: fit-content;
}

button.btn.cat__btn.skill-btn {
  display: inline-block;
  width: fit-content;
}

.btn.cat__btn:hover {
  transform: translateY(0);
  border: 1px solid var(--primary-brand-color-400);
}

.primary {
  background: var(--primary-brand-color-400);
}

/* -------------------------  */
/* Portfolio card section */

.portfolio__projects {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
  gap: 30px;
  margin-top: 60px;
}

.project-cards-container {
  display: flex;
  flex-direction: column;
  border-radius: 50%;
  transition: all 0.3s ease;
}

.card-container {
  position: relative;
  border-radius: var(--border-radius-1);
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s ease-in-out;
  height: 470px;
  border: 8px solid var(--primary-brand-color-400);
  overflow: hidden;
  transition: transform 0.3s ease-in-out;
  background-color: transparent;
}

.card-container.dark {
  border: 10px solid #ffffff;
}

.card-container:hover {
  border: 10px solid
    linear-gradient(
      60deg,
      hsl(224, 85%, 66%),
      hsl(269, 85%, 66%),
      hsl(314, 85%, 66%),
      hsl(359, 85%, 66%),
      hsl(44, 85%, 66%),
      hsl(89, 85%, 66%),
      hsl(134, 85%, 66%),
      hsl(179, 85%, 66%)
    );
  animation: moveGradient 4s alternate infinite;
}

@keyframes moveGradient {
  50% {
    background-position: 100% 50%;
  }
}

.cover-image {
  width: 100% !important;
  height: 100% !important;
  position: absolute;
  inset: 0;
  object-fit: cover;
  transition: all 0.3s ease-in-out;
}

.project-cards-container:hover .cover-image {
  transform: scale(1.2);
}

.overlay::before {
  content: " ";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.5);
}

.overlay::after {
  content: " ";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(to top, rgba(0, 0, 0, 0.5), transparent);
  border-radius: inherit;
  opacity: 1;
}

.project-description {
  position: absolute;
  bottom: 3%;
  left: 1px;
  text-align: left;
  margin: 0 5px;
  width: 90%;
  padding: 1rem;
  background: rgba(0, 0, 0, 0.7);
  color: white;
  box-sizing: border-box;
  background-color: transparent;
  transform: translateY(100%);
  transition: transform 0.55s ease, opacity 0.3s ease;
}

/* took me a long time to figure out here. I needed to hover on the entire container of the project-cards-container */
.project-cards-container:hover .project-description {
  transform: translateY(0);
  opacity: 1;
  z-index: 160;
}

.project-title {
  color: white;
  font-weight: bold;
  font-size: 34px;
  margin: 0;
}

.card-description {
  font-size: 17px;
  margin: 0;
  color: rgb(248, 248, 248);
}

.button-card-container {
  display: flex;
  gap: 10px;
  margin-top: 20px;
}

.btn .button-card {
  text-transform: capitalize;
  background-color: var(--primary-brand-color-400);
  cursor: pointer;
  border: none;
  text-align: center;
  padding: 10px 30px;
  transition: background-color 1s ease;
}

.btn:focus .button-card:focus a:focus {
}

.button-card-container > .button-card > p a {
  color: white;
}

.btn:hover {
  background-color: var(--primary-brand-color-600);
}

.btn a {
  color: inherit;
  text-decoration: none;
  font-size: 18px;
}

/* Project Modal Section */
.projectmodal-container {
  width: 545px;
  height: 100vh;
  max-height: 100%;
  display: flex;
  justify-content: flex-end;
  position: fixed;
  z-index: 1230;
  top: 0;
  right: 0;
  margin-right: 0;
  flex: 1;
  overflow-y: scroll;
  scrollbar-color: #06d8fd #ffffff;
}

.overlay-projectmodal {
  background-color: black;
  z-index: 200;
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  overflow-y: auto;
  background-size: cover;
  background-position: center center;
  opacity: 0.65;
}

.overlay-projectmodal::after {
  background: linear-gradient(to bottom, transparent 0%, rgb(70, 70, 70) 50%);
}

.container-right {
  width: 100%;
  max-width: 100%;
  height: fit-content;
  z-index: 250;
  align-items: right;
  display: flex;
  flex-direction: column;
  background-color: transparent;
  overflow-y: auto;
  overflow-x: overlay;
}

.projectmodal {
  padding: 30px;
  text-align: left;
  background: #fcfaf9;
}

.projectmodal-top-row {
  text-align: center;
  display: flex;
  justify-content: space-between;
  vertical-align: middle;
  align-items: center;
  margin-bottom: 5px;
}

.back {
  color: #7e7e7e;
  font-size: 14px;
  cursor: pointer;
}

.back-to-projects a {
  font-weight: 800;
  font-size: 18px;
  word-spacing: 1px;
  letter-spacing: 0.3px;
  color: black;
}

.back-to-projects:hover {
  cursor: pointer;
  text-decoration: underline;
}

.separator hr {
  margin-top: 10px;
  border: 0.5px solid #eaeaea;
  height: 0.7px;
}

.project-main-title-modal {
  margin: 24px 0 8px;
}
.project-title-modal {
  color: #000;
  margin: 24px 0 8px;
  font-size: 24px;
}

.project-modal-text {
  font-size: 18px;
  letter-spacing: 0.5;
  word-spacing: 0.5;
  margin-bottom: 24px;
}

.projectmodal-image,
.projectmodal-image img {
  width: 100%;
  height: 300px;
  border-radius: 10px;
  border: 1px solid black;
}

.projectmodal-about {
  margin: 24px 0 12px;
}

.title-name {
  color: #363636;
}

.projectmodal-tech .technologies {
  margin-top: 10px;
  margin-bottom: 15px;
}

.projectmodal-tech > p span {
  font-weight: bold;
  color: #000;
  background-color: #efe9e4;
  border-radius: 4px;
  padding: 10px 15px;
}

.project-website-heading {
  margin-top: 40px;
  margin-bottom: 12px;
}

.projectmodal-websitelink {
  font-size: 17px;
  color: #363636;
  font-weight: bold;
  cursor: pointer;
}

.projectmodal-websitelink:hover {
  text-decoration: underline;
}

.projectmodal-footer {
  width: 100%;
  height: 60px;
  background-color: #10253a;
  vertical-align: middle;
  align-items: center;
  justify-content: center;
  display: flex;
  padding: 20px 0;
}

.projectmodal-footer-link p {
  color: #fff;
  font-size: 20px;
  letter-spacing: 1px;
  justify-content: center;
  text-align: center;
  z-index: 1500;
}

@media screen and (max-width: 1024px) {
  .portfolio__projects {
    grid-template-columns: 1fr;
  }
  .btn.button-card {
    width: fit-content;
  }
}

